--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2474,11 +2474,11 @@ ul.list_action li a .i_report {
 .chat ul li.other .date {
     float: left;
     /* margin: -20px 25px 0 0; */
-    margin: 8px 91px 0 0;
+    margin: 8px 70px 0 0;
 }
 
 .chat ul li.other .message {
-    margin: 0 90px 0 0;
+    margin: 0 70px 0 0;
 }
 
 .chat ul li.other .message:before {
@@ -2496,7 +2496,7 @@ ul.list_action li a .i_report {
 }
 
 .chat ul li.you .message {
-    margin: 0 0 0 90px;
+    margin: 0 0 0 70px;
 }
 
 .chat ul li.you .message:before {
